# mac

./: .gitignore  500.html  README.md  manage.py  pyproject.toml  requirements.txt  settings.py  urls.py  wsgi.py
artistas/: admin.py  models.py  urls.py  views.py
artistas/fixtures/: artistas.json  artistas_artista.json
artistas/templates/: artistas_critica.html  artistas_fotografia.html
artistas/templates/templates/: artistas_desenho.html  artistas_detalhe.html  (+1 more)
contactos/: urls.py
en/LC_MESSAGES/: django.mo  django.po
exposicoes/: admin.py  models.py
exposicoes/templates/: exposicoes.html  exposicoes_actuais.html  exposicoes_futuras.html  exposicoes_obras.html  exposicoes_passadas.html  exposicoes_passadas_ano.html
filebrowser/: fb_settings.py  functions.py  views.py
galeria/: urls.py
galeria/fixtures/: galeria.json
galeria/templates/: galeria_acervo.html  galeria_acervo_artista.html  galeria_equipa.html
geral/templatetags/: tags.py
mac/: 500.html  settings.py  urls.py  views.py
mac/art/: admin.py  models.py  urls.py  views.py
mac/artistas/: admin.py  models.py  urls.py  views.py
mac/common/: common.py
mac/contactos/: models.py  urls.py  views.py
mac/exposicoes/: admin.py  models.py  urls.py  views.py
mac/galeria/: admin.py  models.py  urls.py  views.py
mac/gallery/: admin.py  context_processors.py  managers.py  models.py  urls.py  views.py
mac/geral/: admin.py  context_processors.py  geral_fixture.json  models.py  urls.py  views.py
mac/publicacoes/: admin.py  models.py  urls.py  views.py
mac/settings/: base.py  dev.py  prod.py
mac/templates/: 500.html  banner.html  base.html  index.html  links.html  mapa.html  navigation.html  resultados.html
mac/utils/: utils.py
publicacoes/: urls.py
publicacoes/templates/: publicacoes_catalogos.html  publicacoes_detalhe.html  publicacoes_imprensa.html  publicacoes_monografias.html  publicacoes_newsletters.html
templates/: arte.html  base.html  base.html.~1~  base.html.~2~  index.html  servicos.html
utils/: utils.py
(+156 files in other folders)
