[tool.poetry]
name = "mac"
version = "1.99.0"
description = "MAC - Movimento Arte Contemporânea Gallery Website"
authors = ["Filipa Andrade <filipa.andrade@gmail.com>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
Django = "^2"
django-filebrowser = "^3.10.2"
mysqlclient = "^2.0.3"
python = "^3.8"
python-dotenv = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
