[tool.poetry]
name = "mac"
version = "1.99.0"
description = "MAC - Movimento Arte Contemporânea Gallery Website"
authors = ["Filipa Andrade <filipa.andrade@gmail.com>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
Django = "^3.2.12"
django-filebrowser = "^3.10.2"
mysqlclient = "^2.0.3"
python = "^3.8"
python-dotenv = "^0.16.0"
boto3 = "^1.17.49"
django-storages = "^1.11.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
autohooks = "^21.3.0"
autohooks-plugin-black = "^1.2.0"
autohooks-plugin-isort = "^1.0.0"

[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.isort"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
